# Chess

./: .gitignore
chess/: CMakeLists.txt
chess/include/: board_runner.h  board_ui.h  boardstates.h  pieces.h  settings.h
chess/linux/: CMakeCache.txt  Makefile  cmake_install.cmake
chess/src/: board_runner.cpp  board_ui.cpp  boardstates.cpp  main.cpp  pieces.cpp
